# libjson-rpc-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  sonar-project.properties
dev/: FindJSONCPP.cmake  testcoverage.sh
src/example/: CMakeLists.txt  simpleclient.cpp  simpleserver.cpp  spec.json  stubclient.cpp  stubserver.cpp  xbmcremote.cpp
src/jsonrpc/: CMakeLists.txt  client.h  version.h.in
src/jsonrpc/client/: abstractclientconnector.cpp  abstractclientconnector.h  batchcall.cpp  batchcall.h  client.cpp  client.h  httpclient.cpp  httpclient.h  rpcprotocolclient.cpp  rpcprotocolclient.h
src/jsonrpc/common/: abstractauthenticator.h  errors.cpp  errors.h  exception.cpp  exception.h  procedure.cpp  procedure.h  specificationparser.h  specificationwriter.h
src/jsonrpc/json/: json_reader.cpp  json_writer.cpp  reader.h
src/jsonrpc/server/: abstractrequesthandler.h  abstractserver.h  abstractserverconnector.cpp  abstractserverconnector.h  httpserver.cpp  httpserver.h  rpcprotocolserver.cpp  rpcprotocolserver.h
src/stubgenerator/: CMakeLists.txt  anyoption.cpp  cppclientstubgenerator.cpp  cppclientstubgenerator.h  cppclienttemplate.h  cppstubgenerator.cpp  cppstubgenerator.h  main.cpp  phpserverstubgenerator.cpp  phpserverstubgenerator.h  serverstubgenerator.cpp  serverstubgenerator.h  stubgenerator.cpp  stubgenerator.h
src/stubgenerator/helper/: cpphelper.h
src/stubgenerator/server/: cppserverstubgenerator.cpp
src/test/: CMakeLists.txt  errorhandling.cpp  helloworld.cpp  jsonvalue.cpp  parametervalidation.cpp  server.h  specification.cpp  test_client.cpp  test_integration.cpp  unit_test.cpp
